- Added Renaming, and Deleting sections and Pages - Styling for Scroll Bars - Styling for Title bars - Changed how highlighters work. InkCanvas Highlighter strokes were appearing under the previous strokes, how highlighter is a pen with opacity and color changed

--- a/TwoOkNotes/TwoOkNotes.csproj
+++ b/TwoOkNotes/TwoOkNotes.csproj
@@ -9,12 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Assets\Fonts\**" />
+    <EmbeddedResource Remove="Assets\Fonts\**" />
+    <None Remove="Assets\Fonts\**" />
+    <Page Remove="Assets\Fonts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Page Remove="Assets\Themes\LauncherButtonTheme.xaml" />
     <Page Remove="Assets\Themes\LauncherComboBoxTheme.xaml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Assets\Fonts\" />
     <Folder Include="Assets\Images\" />
     <Folder Include="TempNoteFolder\" />
   </ItemGroup>
